seed/versions/v2/references.md
---
title: References and further reading
section: Reference
---

# References and further reading

- The `nimbus.toml` schema reference
- API keys and how scoping works
- TOML, and why we chose it over YAML for the project file

## Spec sheet

The 0.5 spec sheet is captured in the backup and embedded below:

<div class="embed embed-pdf"><object data="./documents/spec-sheet.pdf" type="application/pdf"><a href="./documents/spec-sheet.pdf">Open the Nimbus 0.5 spec sheet (PDF) →</a></object></div>

## Downloads

- [Spec sheet (PDF)](./documents/spec-sheet.pdf)
- [Default configuration (CSV)](./reference/data/config-defaults.csv)
- [API endpoints (JSON)](./reference/data/api-endpoints.json)
## Product screens

The Nimbus media kit ships unchanged with every release. These full-resolution
screens are captured in each snapshot. Because the bytes are identical across
versions, Plakar's content-defined chunking stores them **once** and
deduplicates them across the whole history.

![Nimbus global edge network](./media/screen-1.jpg)

![Inside a Nimbus region](./media/screen-2.jpg)

![The request pipeline](./media/screen-3.jpg)

More screens are in the media kit, captured alongside this page: `screen-4.jpg`,
`screen-5.jpg`, and `screen-6.jpg`.
