seed/versions/v4/references.md
---
title: References and further reading
section: Reference
---

# References and further reading

- The plugin author's guide
- Draining, connection lifetimes, and `--drain-timeout`
- Wiring Nimbus telemetry into Grafana

## What people are building

<div class="tweet-embed"><div class="tweet-head"><img class="tweet-avatar" src="./guides/images/avatar.jpg" alt="" /><div><div class="tweet-name">Priya Nair</div><div class="tweet-handle">@priya_builds</div></div><span class="tweet-bird">🐦</span></div><p class="tweet-body">Switched our docs + assets pipeline to Nimbus 1.5 plugins. Image optimization and zero-downtime deploys out of the box. Rollouts went from minutes to seconds.</p><p class="tweet-date">10:24 AM · Mar 4, 2025</p></div>

## Spec sheet

<div class="embed embed-pdf"><object data="./documents/spec-sheet.pdf" type="application/pdf"><a href="./documents/spec-sheet.pdf">Open the Nimbus 1.5 spec sheet (PDF) →</a></object></div>

## Downloads

- [Spec sheet (PDF)](./documents/spec-sheet.pdf)
- [Release changelog (PDF)](./documents/changelog.pdf)
- [Default configuration (CSV)](./reference/data/config-defaults.csv)
- [API endpoints (JSON)](./reference/data/api-endpoints.json)
## Product screens

The Nimbus media kit ships unchanged with every release. These full-resolution
screens are captured in each snapshot. Because the bytes are identical across
versions, Plakar's content-defined chunking stores them **once** and
deduplicates them across the whole history.

![Nimbus global edge network](./media/screen-1.jpg)

![Inside a Nimbus region](./media/screen-2.jpg)

![The request pipeline](./media/screen-3.jpg)

More screens are in the media kit, captured alongside this page: `screen-4.jpg`,
`screen-5.jpg`, and `screen-6.jpg`.
